feat: Change for report and added pdf & excel with apache poi & itext
